--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
     align-self: center;
     background-color: #c7ba94;
     padding: 50px;
-    max-width: 1200px;
+    width: 100%;
     gap: 10px;
 }
 
