--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
 }
 
 .home {
@@ -50,7 +51,7 @@ body {
     align-self: center;
     background-color: #c7ba94;
     padding: 50px;
-    width: 100%;
+    /* width: 100%; */
     gap: 10px;
 }
 
