--- a/style.css
+++ b/style.css
@@ -46,6 +46,28 @@ body {
     margin-right: 85px;
 }
 
+.isi2 {
+    width: 150px;
+    padding: 10px;
+    text-align: center;
+    border: 2px solid black;
+    background-color: black;
+    color: white;
+    margin-left: 85px;
+    margin-right: 85px;
+   
+}
+
+.isi3 {
+    width: 150px;
+    padding: 10px;
+    text-align: center;
+    border: 2px solid black;
+    margin-left: 85px;
+    margin-right: 85px;
+    margin-top: 10px;   
+}
+
 .elemeninti {
     display: flex;
     align-self: center;
