--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
 .home {
@@ -73,6 +73,7 @@ body {
     align-self: center;
     background-color: #c7ba94;
     padding: 50px;
+    height: 100vh;
     gap: 10px;
 }
 
@@ -90,6 +91,7 @@ body {
 .elemen2 {
     width: 50%;
     margin-top: 60px;
+    font-family: 'Inter', sans-serif;
 }
 
 .kolomdaftar {
@@ -132,4 +134,129 @@ form {
     background-color: #a9a388;
     display: flex;
     justify-content: center;
+}
+
+
+.headerangka {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+.lingkaran1 {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  background-color: white;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.lingkaran1:hover {
+  border-color: #b39b81;
+  background-color: #fffbf0;
+}
+
+.isilingkaran {
+  border: 2px solid #ccc;
+  border-radius: 25px;
+  padding: 5px 15px;
+}
+
+.berandakanan {
+background-color: #2f3fff;
+  color: white;
+  padding: 30px 20px;
+  width: 35%;
+  height: 100vh;
+}
+
+.beranda h2 {
+  font-weight: bold;
+  margin-top: 30px;
+}
+
+.beranda h4 {
+  margin: 10px 0 5px 0;
+  font-weight: 700;
+}
+
+.beranda p {
+  font-size: 14px;
+  line-height: 1.6;
+  margin: 0 0 8px 0;
+}
+
+.experience-entry {
+  display: flex;
+  gap: 40px;
+  width: 900px;
+  margin: auto;
+}
+
+.left-column {
+  flex: 1;
+  color: #222;
+}
+
+.left-column .industry {
+  font-style: italic;
+  color: #a6966f;
+}
+
+.left-column .date {
+  margin-top: 10px;
+  color: #444;
+}
+
+.right-column {
+  flex: 2;
+}
+
+.position {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.highlight {
+  color:  #a6966f;
+  font-style: italic;
+  font-weight: 500;
+}
+
+.beranda {
+    display: flex;
+    align-items: center;
+    align-self: center;
+}
+
+.italic {
+  font-style: italic;
+  color: #3a3aff;
+}
+
+.date {
+  display: block;
+  margin-top: 10px;
+  color: #000;
+}
+
+.blue {
+  color: #3a3aff;
+  font-style: italic;
+}
+
+.gabungall {
+    margin-left: 100px;
+}
+
+.kepala {
+    margin-bottom: 14px;
+}
+
+.kepala h1 {
+    font-size: 100px;
 }
