--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ background-color: #b19c7b;
   color: white;
   padding: 30px 20px;
   width: 35%;
-  height: 150px;
+  height: 150%;
 }
 
 .beranda h2 {
