--- a/style.css
+++ b/style.css
@@ -1,109 +1,266 @@
-body {
-    margin: 0;
+* {
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    margin: 0;
 }
 
-.home {
+body {
+    font-family: "Genome", sans-serif;
+}
+
+:root{
+    --main-color:#ffffff;
+    --second-color: #b7a681;
+}
+
+header {
     display: flex;
-    align-self: center;
-    align-items: center;
     justify-content: space-around;
-    flex-direction: row;
-    background-color: #F2E2B1;
-    padding: 25px;
+    background-color: var(--main-color);
+    padding: 20px;
+    align-items: center;
     position: sticky;
-    top: 0%;
-    margin: 0%;
-    height: 50px;
+    top: 0;
 }
 
-.daftarisi a {
-    margin-left: 50px;
+
+nav a {
+    margin-left: 20px;
+    text-decoration: none;
+    color: black;
 }
 
-.intro img {
+nav a:hover {
+    color: var(--second-color);
+}
+
+.myprofile {
+    display: flex;
+    justify-content: center;
+}
+
+
+.myprofile img {
     width: 50%;
 }
 
-.intro {
-    display: flex;
-    align-items: center;
-    background-color: #D8AE7E;
-}
-.isi h1 {
-    font-size: 40px;
-    margin-left: 85px;
-    margin-right: 85px;
+.myprofile .konten-profile {
+    width: 50%;
+    padding: 3em 5em;
+    background-color: var(--second-color); 
 }
 
-.paragraf {
-    background-color: white;
-    padding: 40px;
+.konten-profile .lorem {
+    background-color: var(--main-color);
+    padding: 3em;
+    box-shadow: -10px 10px 0 #92845c;
+}
+
+.konten-profile p {
+    margin-bottom: 15px;
+}
+
+.konten-profile h1 {
+    margin-bottom: 15px;
+    color: var(--main-color);
+    font-weight: 900;
+}
+
+
+
+
+.konten-profile button {
+    padding: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.konten-profile .buttons {
     display: flex;
     flex-direction: column;
-    margin-left: 85px;
-    margin-right: 85px;
+    width: 200px;
 }
 
-.isi2 {
-    width: 150px;
-    padding: 10px;
-    text-align: center;
-    border: 2px solid black;
+button:nth-of-type(1) {
     background-color: black;
-    color: white;
-    margin-left: 85px;
-    margin-right: 85px;
-   
+    color: var(--main-color);
 }
 
-.isi3 {
-    width: 150px;
-    padding: 10px;
-    text-align: center;
-    border: 2px solid black;
-    margin-left: 85px;
-    margin-right: 85px;
-    margin-top: 10px;   
+button:nth-of-type(1):hover {
+    color: var(--second-color);
 }
 
-.elemeninti {
-    display: flex;
-    align-self: center;
-    background-color: #c7ba94;
-    padding: 50px;
-    height: 100vh;
-    gap: 10px;
+.content {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    line-height: 25px;
+    box-sizing: border-box;
+    background-color: var(--second-color);
 }
 
-.elemeninti h1 {
-    font-weight: bold;
-    margin-top: 1px;
-    
+.left-conten {
+    padding-top: 4em;
+    padding-right: 4em;
+    padding-bottom: 8em;
+    padding-left: 25em;
+}
+.right-conten {
+    padding-top: 4em;
+    padding-right: 20em;
+    padding-bottom: 8em;
+    padding-left: 4em;
 }
 
-.elemen1 {
-    width: 50%;
-    margin-top: 60px;
+.content h3 {
+    margin-bottom: 20px;
 }
 
-.elemen2 {
-    width: 50%;
-    margin-top: 60px;
-    font-family: 'Inter', sans-serif;
+.right-conten ul:nth-of-type(1) {
+    margin-bottom: 20px;
 }
+
+main h2 {
+    padding-left: 12em;
+    padding-top: 2em;
+    text-transform: uppercase;
+    font-size: 2em;
+}
+
+@media (max-width:768px) {
+ .konten-profile {
+  display: inline;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+ }
+
+ header {
+  display: block;
+  margin: 0;
+  text-align: center;
+ }
+
+ header h3 {
+  margin-bottom: 10px;
+ }
+
+ nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ }
+
+ .myprofile {
+  flex-direction: column;
+ }
+
+ .myprofile img {
+  width: 100%;
+ }
+
+ .myprofile .konten-profile {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.konten-profile h1 {
+  text-align: center;
+  padding: 10px;
+}
+
+.konten-profile .lorem {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+main h2 {
+  padding: 30px 0;
+  text-align: center;
+}
+
+.content {
+  grid-template-columns: 100%;
+  box-sizing: border-box;
+  padding: 0;
+}
+
+.content .left-conten {
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.content .right-conten {
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.kolomdaftar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+}
+
+.isikolom p {
+  font-size: 14px;
+  padding-top: 15px;
+  text-align: center;
+}
+
+.desktop-br {
+  display: none;
+}
+
+.daftar form {
+  width: 90%;
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+form input {
+  width: 100%;
+  box-sizing: border-box;
+}
+ }
+
 
 .kolomdaftar {
     background-color: #D7D3BF;
     display: flex;
-    align-items: center;
-    height: 70vh;
+    justify-content: center;
+    gap: 2em;
+    box-sizing: border-box;
+    padding: 90px;
 }
 
-.kolomdaftar h2 {
-    margin: 20%;
-    line-height: 1.5;
+.kolomdaftar .isikolom {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  text-align: left;
+}
+
+.kolomdaftar .daftar {
+  width: 50%;
+}
+
+.isikolom > p{
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 1.5em;
+  color: white;
+  letter-spacing: 2px;
+  line-height: 1.6;
+  align-self: flex-start;
+  margin: 0;
 }
 
 form {
@@ -116,21 +273,11 @@ form {
   margin-bottom: 10px;
   padding: 10px;
   border: none;
-  background-color: #fdfdfc;
   font-weight: bold;
 }
 
-.daftar button {
-    margin-bottom: 10px;
-    padding: 10px;
-    border: none;
-    background-color: #fdfdfc;
-    align-self: self-end;
-    font-weight: bold;
-}
-
 .ending {
-    padding: 5px;
+    padding: 10px;
     background-color: #a9a388;
     display: flex;
     justify-content: center;
